Remove mention of Krankenschein

--- a/Handbuch.tex
+++ b/Handbuch.tex
@@ -325,9 +325,8 @@ folgt aussehen könnte:
 
 \bild{.9}{ESA-Edit}
 
-Sie können hier die Werkzeuge \knopf{Kommentar hinzufügen} und
-\knopf{Krankenschein hinzufügen} verwenden. Ein Kommentar ist in der üblichen
-Wiki-Syntax formatierbar.
+Sie können hier einen \knopf{Kommentar hinzufügen}. Ein Kommentar ist in der
+üblichen Wiki-Syntax formatierbar.
 
 Sollten Sie persönliche Informationen des Studenten wie Vorname, Nachname,
 Matrikelnummer, Emailadresse oder Studiengang ändern wollen, verwenden Sie
