--- a/Handbuch.tex
+++ b/Handbuch.tex
@@ -16,7 +16,7 @@
 Institut für Informatik, Universität Leipzig}
 
 \title{Die OLAT-Erweiterung XMAN -- Handbuch}
-\date{Überarbeitete Version vom Januar 2010}
+\date{Überarbeitete Version -- 30.05.2013}
 \begin{document}
 \maketitle
 
