Unify spelling of Xman

--- a/Handbuch.tex
+++ b/Handbuch.tex
@@ -15,7 +15,7 @@
 \author{Daniel Gerber, Hans-Gert Gräbe\\ 
 Institut für Informatik, Universität Leipzig}
 
-\title{Die OLAT-Erweiterung XMAN -- Handbuch}
+\title{Die OLAT-Erweiterung Xman-- Handbuch}
 \date{Überarbeitete Version -- 30.05.2013}
 \begin{document}
 \maketitle
@@ -27,9 +27,9 @@ Institut für Informatik, Universität Leipzig}
 \subsection*{Über dieses Handbuch}
 
 Dieses Handbuch soll Sie in die Arbeit mit der Prüfungsverwaltungssoftware
-XMan einführen und Ihnen Konzeption sowie grundlegende Funktionalität der
+Xman einführen und Ihnen Konzeption sowie grundlegende Funktionalität der
 Software nahe bringen. Dieses Handbuch ist für Nutzer geschrieben, die noch
-keine Erfahrung mit XMan haben. Ihnen wird Schritt für Schritt erklärt, wie
+keine Erfahrung mit Xman haben. Ihnen wird Schritt für Schritt erklärt, wie
 einzelne Funktionen zu verwenden sind.  Fortgeschrittene Nutzer können dieses
 Handbuch als Referenz verwenden und sich am Inhaltsverzeichnis orientieren, um
 eine bestehende Frage möglichst schnell beantwortet zu bekommen.
@@ -291,7 +291,7 @@ abgebrochen.
 \subsection{Elektronische Studentenakte suchen}
 
 Da es möglicherweise durch die Fülle der am PA-Portal angemeldeten Studenten
-unmöglich wird, schnell und effizient eine ESA zu finden, bietet XMan die
+unmöglich wird, schnell und effizient eine ESA zu finden, bietet Xman die
 Möglichkeit, nach einer Akte zu suchen. Klicken Sie hierzu auf \knopf{Suchen}
 unter den Menüpunkten \knopf{(Nicht) Validierte ESAs}. Im erscheinenden
 Suchformular können Sie die Kriterien entsprechend Ihrer Suche eintragen. Nach
