--- a/Handbuch.tex
+++ b/Handbuch.tex
@@ -34,9 +34,6 @@ einzelne Funktionen zu verwenden sind.  Fortgeschrittene Nutzer können dieses
 Handbuch als Referenz verwenden und sich am Inhaltsverzeichnis orientieren, um
 eine bestehende Frage möglichst schnell beantwortet zu bekommen.
 
-In diesem Handbuch wird auf die Beistellung der weiblichen Form zur männlichen
-verzichtet. Dies dient ausschließlich der besseren Lesbarkeit.
-
 Sollten in diesem Dokument Fehler enthalten sein oder ein Sachverhalt nicht
 detailliert genug beschrieben sein, bitten wir Sie, uns
 Verbesserungsvorschläge über die Emailadresse
@@ -49,27 +46,27 @@ zu verbessern.
 \subsection*{Aufbau dieses Handbuchs}
 
 Das Handbuch ist in drei Kapitel unterteilt. Im ersten Kapitel wird das Portal
-{\em aus der Sicht eines studentischen Nutzers} beschrieben. Es werden
+{\em aus studentischer Sicht} beschrieben. Es werden
 grundlegende Fragen wie Registration an der Plattform und Beantragung der
 elektronischen Studentenakte sowie die Einschreibung zu Prüfungen beschrieben.
 
 Das zweite Kapitel widmet sich der Darstellung der Portalfunktionen {\em aus
-  Sicht der Rolle Prüfungsamt}. Es wird hier insbesondere darauf eingegangen,
+Sicht des Prüfungsamt}. Es wird hier insbesondere darauf eingegangen,
 wie Blöcke/Module und Studiengänge im System bereitgestellt werden.  Weiter
 wird die Verwaltung der elektronischen Studentenakte aus Sicht der Rolle
 Prüfungsamt erläutert.
 
-Das letzte Kapitel des Handbuchs stellt die von {\em Prüfungsverantwortlichen}
+Das letzte Kapitel des Handbuchs stellt die von {\em Prüfern}
 nutzbare Funktionalität zur Erstellung und Verwaltung von Prüfungen vor.
 Hierzu wird schrittweise erklärt, wie eine Prüfung erstellt und bearbeitet
 werden kann.
 
 \clearpage
-\section{Hilfe für Studenten}
+\section{Hilfe für Studierende}
 
 \subsection{Registration und Anmeldung am OLAT-PA-Portal}
 
-Am OLAT-PA-Portal erfolgt die Authentifizierung für Studenten über den
+Am OLAT-PA-Portal erfolgt die Authentifizierung für Studierende über den
 zentralen Studserv-Account der Universität mit den Ihnen im Zuge der
 Immatrikulation bekanntgegebenen Zugangsdaten.  Während des ersten Zugangs zum
 OLAT-PA-Portal werden einige Daten abgefragt, die für das Prüfungsmanagement
@@ -126,7 +123,7 @@ auf.
 
 \subsection{Einschreibung zu einer Prüfung}
 
-Zu einer Prüfung können sich nur {\bf Studenten mit validierter ESA}
+Zu einer Prüfung können sich nur {\bf Studierende mit validierter ESA}
 einschreiben.
 
 Nachdem Sie im Reiter \knopf{Lernressourcen} die gewünschte Prüfung über den
@@ -162,8 +159,8 @@ Prüfungen.  Durch Drücken auf den Namen wird die Prüfungsansicht gestartet.
 
 \subsection{Prüfungsergebnisse in der Elektronischen Studentenakte einsehen}
 
-Sobald der zuständige Prüfer die Bewertung Ihrer Prüfungsleistung eingetragen
-hat, erhalten Sie eine Benachrichtigungsemail. Ab diesem Zeitpunkt können Sie
+Nachdem die Bewertung Ihrer Prüfungsleistung eingetragen wurde
+erhalten Sie eine Benachrichtigungsemail. Ab diesem Zeitpunkt können Sie
 das Ergebnis Ihrer Prüfung in Ihrer ESA einsehen.  Ihre Studentenakte hat etwa
 das folgende Aussehen:
 
@@ -195,7 +192,7 @@ provisorische Passwort ändern.
 
 \subsection{Studiengang erstellen}
 
-Jeder Student muss sich im Zuge der Beantragung seiner ESA einem Studiengang
+Jeder Studierende muss sich im Zuge der Beantragung seiner ESA einem Studiengang
 aus einer vorgegebenen Liste zuordnen.  Die Liste der dabei angezeigten
 Studiengänge wird durch die Rolle Prüfungsamt verwaltet. 
 
@@ -290,7 +287,7 @@ abgebrochen.
 
 \subsection{Elektronische Studentenakte suchen}
 
-Da es möglicherweise durch die Fülle der am PA-Portal angemeldeten Studenten
+Da es möglicherweise durch die Fülle der am PA-Portal angemeldeter Studierender
 unmöglich wird, schnell und effizient eine ESA zu finden, bietet Xman die
 Möglichkeit, nach einer Akte zu suchen. Klicken Sie hierzu auf \knopf{Suchen}
 unter den Menüpunkten \knopf{(Nicht) Validierte ESAs}. Im erscheinenden
@@ -320,7 +317,7 @@ Fehleingaben zu vermeiden, das Löschen der Akte(n) zusätzlich bestätigen.
 
 Um eine bestimmte elektronische Studentenakte zu bearbeiten, klicken Sie auf
 die in der Tabelle unter \knopf{Validierte ESAs} angezeigte Matrikelnummer des
-jeweiligen Studenten. Es öffnet sich ein neuer Reiter, der beispielsweise wie
+jeweiligen Studierenden. Es öffnet sich ein neuer Reiter, der beispielsweise wie
 folgt aussehen könnte:
 
 \bild{.9}{ESA-Edit}
@@ -328,7 +325,7 @@ folgt aussehen könnte:
 Sie können hier einen \knopf{Kommentar hinzufügen}. Ein Kommentar ist in der
 üblichen Wiki-Syntax formatierbar.
 
-Sollten Sie persönliche Informationen des Studenten wie Vorname, Nachname,
+Sollten Sie persönliche Informationen wie Vorname, Nachname,
 Matrikelnummer, Emailadresse oder Studiengang ändern wollen, verwenden Sie
 bitte die vorgegebenen Werkzeuge unter dem Reiter \knopf{Benutzermanagement}
 oder wenden Sie sich an den Administrator des Systems. Wichtig ist hier, dass
@@ -400,21 +397,20 @@ löschen.  Bei der Wahl der Termine sollten Sie vorab mglw.\ Rücksprache mit
 dem Prüfungsamt halten, um eventuelle terminliche Kollisionen mit anderen
 Prüfungen zu vermeiden.
 
-Unter dem Reiter \knopf{Vormerken} können Sie einstellen, ob Studenten mit
+Unter dem Reiter \knopf{Vormerken} können Sie einstellen, ob Studierende mit
 Ihrer Anmeldung für die Prüfung nur vorgemerkt oder bereits verbindlich
 registriert werden.  Der Vormerkemodus ist besonders für die Fälle vorgesehen,
 wenn vorab spezielle Zulassungsvoraussetzungen zu prüfen sind oder Sie nach
 Anmeldeschluss Lücken in Ihrem Prüfungsplan durch zeitliche Verschiebung von
 Prüfungen zu schließen beabsichtigen.  
 
-Im Vormerkemodus werden die Prüfungskandidaten zunächst in eine temporäre
-Liste aufgenommen. Sie als Prüfer entscheiden später für jeden einzelnen
-Teilnehmer, ob er in die Liste der zugelassenen Studenten übertragen wird.
+Im Vormerkemodus werden die Studentinnen und Studenten zunächst in eine temporäre
+Liste aufgenommen. Sie entscheiden dann später für jeden einzeln,
+ob er in die Liste der zugelassenen Prüflinge übertragen wird.
 Öffnen Sie dazu den Reiter dieser Prüfung, wählen Sie die zu registrierenden
-Kandidaten in der {\em Vorgemerkt}-Liste über das Wahl-Kästchen aus und führen
-Sie die Aktion \knopf{Registrieren} aus. Die Registration kann wieder
-rückgängig gemacht werden, indem Sie Studenten in der {\em Registriert}-Liste
-auswählen und die Aktion \knopf{Vormerken} ausführen.
+Studentinnen und Studenten in der {\em Vorgemerkt}-Liste über das Wahl-Kästchen aus und führen
+Sie die Aktion \knopf{Registrieren} aus. Die Registration kann auf die gleiche
+Weise wieder rückgängig gemacht werden.
 
 Im Reiter \knopf{Katalog} können Sie Ihre Prüfung in den Prüfungskatalog
 eintragen und damit einem bestimmten Prüfungszeitraum zuordnen.  Sollte der
@@ -433,9 +429,9 @@ Ihre Prüfung steht jetzt den Prüflingen zur Einschreibung zur Verfügung.
 
 Um Kontakt mit einem Prüfling aufzunehmen, klicken sie entweder in der Liste
 der {\em registrierten} oder der {\em vorgemerkten} Kandidaten auf den
-Loginnamen des entsprechenden Studenten. Es öffnet sich die
-\knopf{Visitenkarte} des Studenten in einem neuen Reiter. Unter
-\knopf{Kontakt} haben Sie die Möglichkeit, dem Teilnehmer eine Email zu
+Loginnamen der oder des entsprechenden Studierenden. Es öffnet sich die
+entsprechende \knopf{Visitenkarte} in einem neuen Reiter. Unter
+\knopf{Kontakt} haben Sie die Möglichkeit, dem Prüfling eine Email zu
 schicken.
 
 \subsection{Noten und Kommentare eintragen}
