Remove mention of home screen

--- a/Handbuch.tex
+++ b/Handbuch.tex
@@ -143,20 +143,6 @@ zur Bestätigung eine Email vom System mit diesen Daten. Außerdem kann der
 weitere Prüfungsverlauf nun in der eigenen Studentenakte verfolgt werden.
 Zusätzlich wird für Ihre Prüfung ein Termin im persönlichen Kalender erzeugt.
  
-\subsection{Willkommens-Seite verstehen}
-
-Nachdem Sie sich am Prüfungsportal angemeldet haben, erscheint der
-Startbildschirm mit geöffnetem \knopf{Home}-Reiter.
-
-\bild{.9}{Startbildschirm}
-
-Mit einem Druck auf \knopf{Seite konfigurieren} können Sie Ihre Startseite
-personalisieren. Sie können die zur Verfügung stehenden Portlets beliebig
-verschieben oder auch entfernen. Zum Beispiel zeigt Ihnen das Portlet
-\knopf{Meine ausstehenden Prüfungen} einen Überblick über Ihre offenen
-Prüfungen.  Durch Drücken auf den Namen wird die Prüfungsansicht gestartet.
-Über das Kalenderportlet wird der persönliche Kalender gestartet.
-
 \subsection{Prüfungsergebnisse in der Elektronischen Studentenakte einsehen}
 
 Nachdem die Bewertung Ihrer Prüfungsleistung eingetragen wurde
@@ -436,30 +422,30 @@ schicken.
 
 \subsection{Noten und Kommentare eintragen}
 
-Um die Noten der Teilnehmer einzutragen, wählen sie in der Liste der {\em
-  registrierten} Teilnehmer den oder die entsprechenden Student(en) mit einem
+Um die Noten der Prüflinge einzutragen, wählen sie in der Liste der {\em
+  registrierten} Prüflinge die entsprechenden Studenten mit einem
 Klick auf das Auswahl-Kästchen aus und führen die Aktion \knopf{Noten
-  eintragen} aus. Alle in einem Vorgang ausgewählten Studenten erhalten die
+  eintragen} aus. Alle in einem Vorgang ausgewählten Studierende erhalten die
 gleiche Note.
 
-Um zu einem Studenten einen Kommentar einzutragen, wählen Sie den Studenten
+Um zu einem Prüfling einen Kommentar einzutragen, wählen Sie diesen
 wie gewohnt über das Wahl-Kästchen aus und führen die Aktion \knopf{Kommentar
   hinzufügen} aus, falls der Student noch keinen Kommentar besitzt, oder
 \knopf{Kommentar editieren}, wenn bereits ein Kommentar vorhanden ist.
 
-\subsection{Studenten nachtragen und entfernen}
+\subsection{Prüflinge nachtragen und entfernen}
 
-Falls ein am Portal registrierter Student den festgelegten Anmeldeschluss
+Falls eine am Portal registrierte Studentin oder ein Student den festgelegten Anmeldeschluss
 verpasst hat oder aus anderen Gründen für die Prüfung nicht registriert ist,
-können Sie diesen (auch nach Anmeldeschluss und sogar nach Ablauf der Prüfung)
-manuell nachtragen. Wählen Sie dazu in der Prüfungsansicht \knopf{Nachtragen}
+können diese (auch nach Anmeldeschluss und sogar nach Ablauf der Prüfung)
+manuell nachgetragen werden. Wählen Sie dazu in der Prüfungsansicht \knopf{Nachtragen}
 aus. Es öffnet sich ein Nutzersuchformular, in dem Sie nach dem
-nachzutragenden Studenten suchen und ihn auswählen können. Achten Sie darauf,
-dass der Student bereits eine validierte elektronische Studentenakte
+nachzutragenden Prüfling suchen und ihn auswählen können. Achten Sie darauf,
+dass der Prüfling bereits eine validierte elektronische Studentenakte
 besitzt. Sollte dies nicht der Fall sein, wird eine kurze Information am
 oberen Bildschirmrand angezeigt.
 
-Um einen bereits angemeldeten oder vorgemerkten Studenten abzumelden, wählen
+Um einen bereits angemeldeten oder vorgemerkten Prüfling abzumelden, wählen
 Sie ihn wie gewohnt in der entsprechenden Liste aus und führen die Aktion
 \knopf{Austragen} aus.
 
