Remove concept of validation

--- a/Handbuch.tex
+++ b/Handbuch.tex
@@ -22,6 +22,7 @@ Institut für Informatik, Universität Leipzig}
 
 \tableofcontents
 
+\clearpage
 \section*{Einführung}
 
 \subsection*{Über dieses Handbuch}
@@ -74,13 +75,12 @@ und bestätigen Sie die Eingabe.
 
 \subsection{Elektronische Studentenakte}
 
-Im zweiten Schritt müssen Sie eine {\em Elektronische Studentenakte} (ESA)
-beantragen, in der die relevanten operativen Informationen zum
+Im zweiten Schritt müssen Sie sich eine {\em Elektronische Studentenakte} (ESA)
+erstellen, in der die relevanten operativen Informationen zum
 Prüfungsgeschehen gespeichert sind. 
 
-Dazu klicken Sie unter \knopf{Home $>$ Meine Studentenakte} auf das auf der
-rechten Seite erscheinende Werkzeug \knopf{Elektronische Studentenakte $>$
-  Beantragen}.
+Dazu klicken Sie unter \knopf{Home $>$ Meine Studentenakte} auf den Button
+\knopf{Beantragen}.
 
 \bild{.95}{ESA-Beantragen}
 
@@ -90,30 +90,20 @@ kontrollieren Sie die Richtigkeit der Angaben.
 \bild{.7}{ESA-Eingaben}
 
 Als {\em Login} und {\em Email-Adresse} werden Ihre Studserv-Daten verwendet.
-Dies kann nicht geändert werden.  Beachten Sie, dass Ihre {\em Matrikelnummer}
-ausschließlich aus Zahlen bestehen darf.  Wählen Sie Ihren {\em Studiengang}
+Diese können nicht geändert werden. Beachten Sie, dass Ihre {\em Matrikelnummer}
+ausschließlich aus Zahlen bestehen darf und nach erstmaliger Eingabe ebenfalls
+nicht mehr geändert werden kann. Wählen Sie Ihren {\em Studiengang}
 aus der Liste der vorgegebenen Einträge.  Falls Ihr Studiengang dort nicht
 angegeben ist, wählen Sie den Studiengang {\em Sonstige}.
 
-Haben Sie die Studentenakte erfolgreich beantragt, so wird folgender Text auf
-dem Bildschirm ausgegeben:
-\begin{quote}
-  Es liegt ein Antrag auf Erstellung oder Änderung Ihrer elektronischen
-  Studentenakte im Prüfungsamt vor. Bitte gedulden Sie sich noch etwas, bis
-  das Prüfungsamt Ihre elektronische Studentenakte validiert hat.
-\end{quote}
-Sobald das Prüfungsamt Ihre ESA validiert hat, erhalten Sie eine
-Bestätigungsemail an die in der Akte angegebene Emailadresse.  Von nun an
-können Sie sich zu anstehenden Prüfungen einschreiben. Weiterhin wird
-automatisch ein Eintrag über die Validierung in Ihrer ESA erzeugt.
+Haben Sie die Studentenakte erfolgreich beantragt, wird diese auf der gleichen
+Seite direkt angezeigt.
 
-Wenn Sie eine Änderung dieser persönlichen Angaben in einer bereits
-validierten Studentenakte beantragen, wird Ihre Akte automatisch invalidiert
-und dem Prüfungsamt zur erneuten Validierung vorgelegt. Dies wird ebenfalls in
-der Akte vermerkt.
+Sie können Ihren Namen und Studiengang jederzeit ändern, z.\,B. beim
+Übergang vom Bacherlor- zum Masterstudiengang, einer Heirat oder ähnlichem.
 
-Sie können Ihre eigene Akte über \knopf{Home $>$ Meine Studentenakte}
-einsehen.  Beachten Sie, dass das Portal ausschließlich der operativen
+Sie können Ihre eigene Akte jederzeit über \knopf{Home $>$ Meine Studentenakte}
+einsehen. Beachten Sie, dass das Portal ausschließlich der operativen
 Unterstützung des Prüfungsgeschehens dient und nur die endgültigen Ergebnisse
 Eingang in Ihre zentral an der Universität geführten Unterlagen finden. Bei
 Unstimmigkeiten zum Inhalt der ESA nehmen Sie bitte Kontakt zum Prüfungsamt
@@ -121,8 +111,8 @@ auf.
 
 \subsection{Einschreibung zu einer Prüfung}
 
-Zu einer Prüfung können sich nur {\bf Studierende mit validierter ESA}
-einschreiben.
+Zu einer Prüfung können Sie sich nur einschreiben, wenn Sie sich bereits eine
+{\bf Elektronische Studentenakte} angelegt haben.
 
 Nachdem Sie im Reiter \knopf{Lernressourcen} die gewünschte Prüfung über den
 Katalog, die Suchmaske oder über die Liste aller Prüfungen gefunden und
@@ -149,12 +139,6 @@ das Ergebnis Ihrer Prüfung in Ihrer ESA einsehen.  Ihre Studentenakte hat etwa
 das folgende Aussehen:
 
 \bild{.9}{ESA-Ansicht}
-
-Ist eine Änderung Ihrer elektronischen Studentenakte erforderlich, so kann
-dies über das Werkzeug \knopf{Änderung beantragen} beantragt werden. Beachten
-Sie, dass Ihre Akte bei einer Änderung zunächst invalidiert wird und Sie sich
-bis zur erneuten Validierung nicht zu anstehenden Prüfungen einschreiben
-können.
 
 \clearpage
 \section{Hilfe für die Rolle Prüfungsamt}
@@ -219,55 +203,17 @@ den im Bild rot markierten Bereich \knopf{Tabelle anpassen} ist es möglich, in
 der Tabelle Spalten hinzuzufügen oder zu entfernen. Entfernte Spalten werden
 beim Export nicht berücksichtigt.
 
-\subsection{Elektronische Studentenakte herstellen}
+\subsection{Elektronische Studentenakten einsehen}
 
-Wenn das Prüfungsamt für einen (am Portal registrierten) Studenten sofort eine
-Akte erzeugen muss und nicht darauf warten kann, dass der Student diese selbst
-beantragt, kann dies über das Werkzeug \knopf{Hinzufügen} unter den
-Menüpunkten \knopf{(Nicht) Validierte ESAs} im Reiter
-\knopf{Prüfungsverwaltung} erfolgen. Um den Benutzer zu finden, für den die
-Akte erzeugt werden soll, erscheint nach Betätigung dieses Werkzeugs zunächst
-ein Suchformular. Wurde der Benutzer im System gefunden und ausgewählt, so
-erscheint das reguläre Formular {\em Elektronische Studentenakte beantragen}
-mit den vom ausgewählten Studenten bereits eingetragenen persönlichen Daten.
-Sollten Sie versuchen, eine ESA für einen Studenten anzulegen, der bereits
-über eine ESA verfügt, erscheint eine Fehlermeldung und der Vorgang wird
-abgebrochen.
-
-\subsection{Elektronische Studentenakte suchen}
-
-Da es möglicherweise durch die Fülle der am PA-Portal angemeldeter Studierender
-unmöglich wird, schnell und effizient eine ESA zu finden, bietet Xman die
-Möglichkeit, nach einer Akte zu suchen. Klicken Sie hierzu auf \knopf{Suchen}
-unter den Menüpunkten \knopf{(Nicht) Validierte ESAs}. Im erscheinenden
-Suchformular können Sie die Kriterien entsprechend Ihrer Suche eintragen. Nach
-der Auswahl eines gefundenen Benutzers erhalten Sie Einsicht in die jeweilige
-Studentenakte. Sollten Sie einen Benutzer auswählen, für den bis jetzt noch
-keine Akte angelegt wurde, erhalten Sie am oberen Bildschirmrand eine kurze
-Information.
-
-\subsection{Elektronische Studentenakte (in)validieren}
-
-Um die von den Studenten beantragten Akten zu validieren, wählen Sie unter dem
-Reiter \knopf{Prüfungsverwaltung} den Menüpunkt \knopf{Nicht Validierte ESAs}.
-Es wird Ihnen nun eine Tabelle mit allen nicht validierten Akten angezeigt.
-Kontrollieren Sie die eingegebenen Daten auf Ihre Richtigkeit und wählen Sie
-alle zu validierenden Akten mit einem Klick auf jeweilie Kästchen in der
-ersten Spalte aus. Betätigen Sie nun Ihre Auswahl durch Klicken auf
-\knopf{Validieren}. Die nun von Ihnen validierten ESA erscheinen von ab jetzt
-unter dem Menüpunkt \knopf{Validierte ESAs}.
-
-Für das Invalidieren von ESAs gehen Sie analog vor. Einziger Unterschied ist,
-dass die Akten unter \knopf{Validierte ESAs} zu suchen sind.  Das Löschen von
-Studentenakten folgt ebenfalls diesem Schema. Allerdings müssen Sie hier, um
-Fehleingaben zu vermeiden, das Löschen der Akte(n) zusätzlich bestätigen.
+Im Reiter \knopf{Prüfungsverwaltung} unter dem Menüpunkt \knopf{Studentenakten}
+können sie alle vorhandenen Elektronischen Studentenakten einsehen und über
+\knopf{Suchen} auch nach einer spezifischen Akte suchen.
 
 \subsection{Elektronische Studentenakte bearbeiten}
 
 Um eine bestimmte elektronische Studentenakte zu bearbeiten, klicken Sie auf
-die in der Tabelle unter \knopf{Validierte ESAs} angezeigte Matrikelnummer des
-jeweiligen Studierenden. Es öffnet sich ein neuer Reiter, der beispielsweise wie
-folgt aussehen könnte:
+die in der Tabelle angezeigte Matrikelnummer des jeweiligen Studierenden.
+Es öffnet sich ein neuer Reiter mit der gewählten Studentenakte:
 
 \bild{.9}{ESA-Edit}
 
@@ -396,10 +342,9 @@ verpasst hat oder aus anderen Gründen für die Prüfung nicht registriert ist,
 können diese (auch nach Anmeldeschluss und sogar nach Ablauf der Prüfung)
 manuell nachgetragen werden. Wählen Sie dazu in der Prüfungsansicht \knopf{Nachtragen}
 aus. Es öffnet sich ein Nutzersuchformular, in dem Sie nach dem
-nachzutragenden Prüfling suchen und ihn auswählen können. Achten Sie darauf,
-dass der Prüfling bereits eine validierte elektronische Studentenakte
-besitzt. Sollte dies nicht der Fall sein, wird eine kurze Information am
-oberen Bildschirmrand angezeigt.
+nachzutragenden Prüfling suchen und ihn auswählen können. Falls der Prüfling
+noch keine Elektronische Studentenakte angelegt hat, wird eine einsprechende
+Fehlermeldung am oberen Bildschirmrand angezeigt.
 
 Um einen bereits angemeldeten oder vorgemerkten Prüfling abzumelden, wählen
 Sie ihn wie gewohnt in der entsprechenden Liste aus und führen die Aktion
