Make toc clickable

--- a/Handbuch.tex
+++ b/Handbuch.tex
@@ -1,6 +1,14 @@
 \documentclass[a4paper,11pt]{article}
 \usepackage{a4wide,ngerman,url,graphicx}
 \usepackage[utf8]{inputenc}
+\usepackage{hyperref}
+\hypersetup{
+    colorlinks,
+    citecolor=black,
+    filecolor=black,
+    linkcolor=black,
+    urlcolor=black
+}
 \setcounter{secnumdepth}{2}
 
 \parindent0pt
