Replace Prüfungsamt with Studienbüro

--- a/Handbuch.tex
+++ b/Handbuch.tex
@@ -59,8 +59,8 @@ Das Handbuch ist in drei Kapitel unterteilt. Im ersten Kapitel wird das Portal
 grundlegende Fragen wie Registration an der Plattform und Beantragung der
 elektronischen Studentenakte sowie die Einschreibung zu Prüfungen beschrieben.
 
-Das zweite Kapitel widmet sich der Darstellung der Portalfunktionen {\em aus
-Sicht des Prüfungsamt}. Es wird hier darauf eingegangen,
+Das zweite Kapitel widmet sich der Darstellung der Portalfunktionen {\em für
+das Studienbüro}. Es wird hier darauf eingegangen,
 wie Studiengänge und elektronischen Studentenakte verwaltet werden.
 
 Das letzte Kapitel des Handbuchs stellt die von {\em Prüfern}
@@ -149,12 +149,12 @@ das folgende Aussehen:
 \bild{.9}{ESA-Ansicht}
 
 \clearpage
-\section{Hilfe für die Rolle Prüfungsamt}
+\section{Hilfe für das Studienbüro}
 
 \subsection{Registration am PA-OLAT-Portal}
 
 Für die Registration am Portal wenden Sie sich bitte an die
-Portaladministration.  Diese legt für Sie einen neuen Account an, schaltet die
+Portaladministration. Diese legt für Sie einen neuen Account an, schaltet die
 erforderlichen Rechte frei und trägt Sie außerdem in die Arbeitsgruppe {\em
   Prüfer} ein.
 
@@ -170,7 +170,7 @@ provisorische Passwort ändern.
 
 Jeder Studierende muss sich im Zuge der Beantragung seiner ESA einem Studiengang
 aus einer vorgegebenen Liste zuordnen.  Die Liste der dabei angezeigten
-Studiengänge wird durch die Rolle Prüfungsamt verwaltet. 
+Studiengänge wird durch das Studienbüro verwaltet. 
 
 Um einen neuen Studiengang anzulegen wählen Sie im Menübaum des Reiters
 \knopf{Prüfungsverwaltung} den Link \knopf{Studiengänge}. Ein Klick auf das
