Jedes Aufkommen von ESA in jeder möglichen Form in Studentenakte geändert. Prüfungsamt durch Studienbuero ersetzt. Mehrere Rechtschreibfehler korrigiert.

--- a/Handbuch.tex
+++ b/Handbuch.tex
@@ -56,12 +56,12 @@ zu verbessern.
 
 Das Handbuch ist in drei Kapitel unterteilt. Im ersten Kapitel wird das Portal
 {\em aus studentischer Sicht} beschrieben. Es werden
-grundlegende Fragen wie Registration an der Plattform und Beantragung der
-elektronischen Studentenakte sowie die Einschreibung zu Prüfungen beschrieben.
+grundlegende Fragen wie Registrierung an der Plattform und Beantragung der
+Studentenakte sowie die Einschreibung zu Prüfungen beschrieben.
 
 Das zweite Kapitel widmet sich der Darstellung der Portalfunktionen {\em für
 das Studienbüro}. Es wird hier darauf eingegangen,
-wie Studiengänge und elektronischen Studentenakte verwaltet werden.
+wie Studiengänge und Studentenakten verwaltet werden.
 
 Das letzte Kapitel des Handbuchs stellt die von {\em Prüfern}
 nutzbare Funktionalität zur Erstellung und Verwaltung von Prüfungen vor.
@@ -71,7 +71,7 @@ werden kann.
 \clearpage
 \section{Hilfe für Studierende}
 
-\subsection{Registration und Anmeldung am OLAT-PA-Portal}
+\subsection{Registrierung und Anmeldung am OLAT-PA-Portal}
 
 Am OLAT-PA-Portal erfolgt die Authentifizierung für Studierende über den
 zentralen Studserv-Account der Universität mit den Ihnen im Zuge der
@@ -81,9 +81,9 @@ erforderlich sind, aber vom Studserv-Account nicht mit übertragen werden.
 Geben Sie diese persönlichen Daten entsprechend des vorgegebenen Formulars ein
 und bestätigen Sie die Eingabe.
 
-\subsection{Elektronische Studentenakte}
+\subsection{Studentenakte}
 
-Im zweiten Schritt müssen Sie sich eine {\em Elektronische Studentenakte} (ESA)
+Im zweiten Schritt müssen Sie sich eine {\em Studentenakte}
 erstellen, in der die relevanten operativen Informationen zum
 Prüfungsgeschehen gespeichert sind. 
 
@@ -97,7 +97,7 @@ kontrollieren Sie die Richtigkeit der Angaben.
 
 \bild{.7}{ESA-Eingaben}
 
-Als {\em Login} und {\em Email-Adresse} werden Ihre Studserv-Daten verwendet.
+Als {\em Login} und {\em E-Mail-Adresse} werden Ihre Studserv-Daten verwendet.
 Diese können nicht geändert werden. Beachten Sie, dass Ihre {\em Matrikelnummer}
 ausschließlich aus Zahlen bestehen darf und nach erstmaliger Eingabe ebenfalls
 nicht mehr geändert werden kann. Wählen Sie Ihren {\em Studiengang}
@@ -114,13 +114,13 @@ Sie können Ihre eigene Akte jederzeit über \knopf{Home $>$ Meine Studentenakte
 einsehen. Beachten Sie, dass das Portal ausschließlich der operativen
 Unterstützung des Prüfungsgeschehens dient und nur die endgültigen Ergebnisse
 Eingang in Ihre zentral an der Universität geführten Unterlagen finden. Bei
-Unstimmigkeiten zum Inhalt der ESA nehmen Sie bitte Kontakt zum Prüfungsamt
+Unstimmigkeiten zum Inhalt der Studentenakte nehmen Sie bitte Kontakt zum Studienbüro
 auf.
 
 \subsection{Einschreibung zu einer Prüfung}
 
 Zu einer Prüfung können Sie sich nur einschreiben, wenn Sie sich bereits eine
-{\bf Elektronische Studentenakte} angelegt haben.
+{\bf Studentenakte} angelegt haben.
 
 Nachdem Sie im Reiter \knopf{Lernressourcen} die gewünschte Prüfung über den
 Katalog, die Suchmaske oder über die Liste aller Prüfungen gefunden und
@@ -139,11 +139,11 @@ zur Bestätigung eine Email vom System mit diesen Daten. Außerdem kann der
 weitere Prüfungsverlauf nun in der eigenen Studentenakte verfolgt werden.
 Zusätzlich wird für Ihre Prüfung ein Termin im persönlichen Kalender erzeugt.
  
-\subsection{Prüfungsergebnisse in der Elektronischen Studentenakte einsehen}
+\subsection{Prüfungsergebnisse in der Studentenakte einsehen}
 
 Nachdem die Bewertung Ihrer Prüfungsleistung eingetragen wurde
 erhalten Sie eine Benachrichtigungsemail. Ab diesem Zeitpunkt können Sie
-das Ergebnis Ihrer Prüfung in Ihrer ESA einsehen.  Ihre Studentenakte hat etwa
+das Ergebnis Ihrer Prüfung in Ihrer Studentenakte einsehen.  Ihre Studentenakte hat etwa
 das folgende Aussehen:
 
 \bild{.9}{ESA-Ansicht}
@@ -151,9 +151,9 @@ das folgende Aussehen:
 \clearpage
 \section{Hilfe für das Studienbüro}
 
-\subsection{Registration am PA-OLAT-Portal}
+\subsection{Registrierung am PA-OLAT-Portal}
 
-Für die Registration am Portal wenden Sie sich bitte an die
+Für die Registrierung am Portal wenden Sie sich bitte an die
 Portaladministration. Diese legt für Sie einen neuen Account an, schaltet die
 erforderlichen Rechte frei und trägt Sie außerdem in die Arbeitsgruppe {\em
   Prüfer} ein.
@@ -187,15 +187,15 @@ den im Bild rot markierten Bereich \knopf{Tabelle anpassen} ist es möglich, in
 der Tabelle Spalten hinzuzufügen oder zu entfernen. Entfernte Spalten werden
 beim Export nicht berücksichtigt.
 
-\subsection{Elektronische Studentenakten einsehen}
+\subsection{Studentenakten einsehen}
 
 Im Reiter \knopf{Prüfungsverwaltung} unter dem Menüpunkt \knopf{Studentenakten}
-können sie alle vorhandenen Elektronischen Studentenakten einsehen und über
+können sie alle vorhandenen Studentenakten einsehen und über
 \knopf{Suchen} auch nach einer spezifischen Akte suchen.
 
-\subsection{Elektronische Studentenakte bearbeiten}
+\subsection{Studentenakte bearbeiten}
 
-Um eine bestimmte elektronische Studentenakte zu bearbeiten, klicken Sie auf
+Um eine bestimmte Studentenakte zu bearbeiten, klicken Sie auf
 die in der Tabelle angezeigte Matrikelnummer des jeweiligen Studierenden.
 Es öffnet sich ein neuer Reiter mit der gewählten Studentenakte:
 
@@ -205,18 +205,18 @@ Sie können hier einen \knopf{Kommentar hinzufügen}. Ein Kommentar ist in der
 üblichen Wiki-Syntax formatierbar.
 
 Sollten Sie persönliche Informationen wie Vorname, Nachname,
-Matrikelnummer, Emailadresse oder Studiengang ändern wollen, verwenden Sie
-bitte die vorgegebenen Werkzeuge unter dem Reiter \knopf{Benutzermanagement}
+Matrikelnummer, E-Mail-Adresse oder Studiengang ändern wollen, verwenden Sie
+bitte die vorgegebenen Werkzeuge unter dem Reiter \knopf{Benutzerverwaltung}
 oder wenden Sie sich an den Administrator des Systems. Wichtig ist hier, dass
-Ihnen am Portal die Rolle Benutzermanager vom Administrator zugewiesen wurde.
+Ihnen am Portal die Rolle {\em Benutzerverwalter} vom Administrator zugewiesen wurde.
 
 \clearpage
 \section{Hilfe für Prüfende}
 
-\subsection{Registration am PA-OLAT-Portal}
+\subsection{Registrierung am PA-OLAT-Portal}
 
-Die Registration für Prüfende verläuft auf dieselbe Weise wie im letzten
-Kapitel für die Rolle Prüfungsamt beschrieben.
+Die Registrierung für Prüfende verläuft auf dieselbe Weise wie im letzten
+Kapitel für die Rolle Studienbüro beschrieben.
 
 \subsection{Prüfung erstellen}
 
@@ -236,7 +236,7 @@ Im Weiteren werden sie aufgefordert, den Namen der Prüfung sowie eine kurze
 Beschreibung einzugeben. Sie können die Beschreibung hier sehr kurz halten, da
 eine detailliertere Beschreibung der Prüfung in einem späteren Schritt
 abgefragt wird. Halten sie sich aber bei dem Namen der Prüfung an die vom
-Prüfungsamt vorgegebene Namenskonvention. 
+Studienbüro vorgegebene Namenskonvention. 
 
 Starten Sie im nächsten Schritt den Editor, um die Prüfung genauer zu
 definieren.
@@ -266,7 +266,7 @@ erzeugt dann die bei {\em Anzahl} angegebene Zahl von konsekutiven Terminen
 entsprechend den Angaben bei {\em Pause} und {\em Dauer}.  Sie können auf
 diese Weise mehrfach Termine erzeugen und später auch erzeugte Termine wieder
 löschen.  Bei der Wahl der Termine sollten Sie vorab mglw.\ Rücksprache mit
-dem Prüfungsamt halten, um eventuelle terminliche Kollisionen mit anderen
+dem Studienbüro halten, um eventuelle terminliche Kollisionen mit anderen
 Prüfungen zu vermeiden.
 
 Unter dem Reiter \knopf{Vormerken} können Sie einstellen, ob Studierende mit
@@ -281,13 +281,13 @@ Liste aufgenommen. Sie entscheiden dann später für jeden einzeln,
 ob er in die Liste der zugelassenen Prüflinge übertragen wird.
 Öffnen Sie dazu den Reiter dieser Prüfung, wählen Sie die zu registrierenden
 Studentinnen und Studenten in der {\em Vorgemerkt}-Liste über das Wahl-Kästchen aus und führen
-Sie die Aktion \knopf{Registrieren} aus. Die Registration kann auf die gleiche
+Sie die Aktion \knopf{Registrieren} aus. Die Registrierung kann auf die gleiche
 Weise wieder rückgängig gemacht werden.
 
 Im Reiter \knopf{Katalog} können Sie Ihre Prüfung in den Prüfungskatalog
 eintragen und damit einem bestimmten Prüfungszeitraum zuordnen.  Sollte der
 gewünschte Zeitraum nicht im Katalog vorhanden sein, wenden sie sich bitte an
-die Rolle Prüfungsamt.
+die Rolle Studienbüro.
 
 Nachdem die Prüfung vollständig angelegt wurde, {\bf muss die Sichtbarkeit der
   Prüfung noch geändert werden}. Starten Sie dafür die \knopf{Detailansicht}
@@ -303,7 +303,7 @@ Um Kontakt mit einem Prüfling aufzunehmen, klicken sie entweder in der Liste
 der {\em registrierten} oder der {\em vorgemerkten} Kandidaten auf den
 Loginnamen der oder des entsprechenden Studierenden. Es öffnet sich die
 entsprechende \knopf{Visitenkarte} in einem neuen Reiter. Unter
-\knopf{Kontakt} haben Sie die Möglichkeit, dem Prüfling eine Email zu
+\knopf{Kontakt} haben Sie die Möglichkeit, dem Prüfling eine E-Mail zu
 schicken.
 
 \subsection{Noten und Kommentare eintragen}
@@ -311,7 +311,7 @@ schicken.
 Um die Noten der Prüflinge einzutragen, wählen sie in der Liste der {\em
   registrierten} Prüflinge die entsprechenden Studenten mit einem
 Klick auf das Auswahl-Kästchen aus und führen die Aktion \knopf{Noten
-  eintragen} aus. Alle in einem Vorgang ausgewählten Studierende erhalten die
+  eintragen} aus. Alle in einem Vorgang ausgewählten Studierenden erhalten die
 gleiche Note.
 
 Um zu einem Prüfling einen Kommentar einzutragen, wählen Sie diesen
@@ -327,7 +327,7 @@ können diese (auch nach Anmeldeschluss und sogar nach Ablauf der Prüfung)
 manuell nachgetragen werden. Wählen Sie dazu in der Prüfungsansicht \knopf{Nachtragen}
 aus. Es öffnet sich ein Nutzersuchformular, in dem Sie nach dem
 nachzutragenden Prüfling suchen und ihn auswählen können. Falls der Prüfling
-noch keine Elektronische Studentenakte angelegt hat, wird eine einsprechende
+noch keine Studentenakte angelegt hat, wird eine einsprechende
 Fehlermeldung am oberen Bildschirmrand angezeigt.
 
 Um einen bereits angemeldeten oder vorgemerkten Prüfling abzumelden, wählen
